2007-12-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua-server.scm
	  Flush explicitly stdout when they tell their worker-id to
	  kahua-spvr, because of change in Gauche CVS HEAD
	  (src/port.c r1.147).

2007-11-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm
	  Lack of sup/, sup:, big/ and big:(exported but not exist).

2007-10-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: cgi/kahua.cgi.in
	  Fix the bug that the parameter "cgi-metavariables" is useless
	  to get alist of metavariables in pure CGI script.  This fix
	  depends on "sys-environ->alist", so now Kahua requires Gauche
	  2007-09-28 revision or later.

2007-09-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/util.scm
	  Improve diplaying stack trace.  Condition <kahua-error> holds
	  stack trace at the point the condition is raised.

	* Fix: src/kahua/server.scm
	  Drop extra escape on stack dump in the default error handler.
	  Fix unexpected error when parameter kahua-default-error-handler
	  is not set explicitly.

2007-09-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Change text/plain node tag from "text" to "text/plain".

2007-09-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/session.scm, doc/Modules/kahua.session.ja,
	          test/session.scm, src/kahua/server.scm, test/server.scm
	  Now session-cont-get returns two values (closure and the cont
	  has permanent URL).

	* Change: src/kahua/server.scm, test/server.scm
	  Add "X-Robots-Tag: noindex" to response header
	  when anonymous continuation entry is requested.

2007-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Fix the problem with default value of site bundle on Emacs 21.

2007-08-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/xml-template.scm
	  Procedure xml-template->sxml now can take '() or #f as
	  replacing element and they are handled as empty node.
